--- a/index.html
+++ b/index.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Dumphard.fun</title>
-  </head>
-  <body>
-    <h1>Dump it real Hard!</h1>
-    <p>Coming Soon</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Dumphard.fun</title>
+  <style>
+    /* Easy knobs to tweak the button’s relative position */
+    :root{
+      --btn-left: 45%;  /* % from the left edge of the image */
+      --btn-top: 59%;   /* % from the top edge of the image  */
+    }
+
+    html, body {
+      margin: 0;
+      height: 100%;
+      background: black; /* page background outside the image */
+      font-family: Arial, sans-serif;
+    }
+
+    /* Frame centers the image area; image can grow up to 80% of viewport */
+    .frame {
+      width: 100vw; height: 100vh;
+      display: flex; align-items: center; justify-content: center;
+    }
+
+    /* Wrapper shrinks/grows exactly with the image; border around it */
+    .img-wrap {
+      position: relative;
+      display: inline-block;
+      border: 10px solid black;
+    }
+
+    /* The image scales to fit within 80% of viewport, preserving aspect ratio */
+    .img-wrap img {
+      display: block;
+      max-width: 100vw;
+      max-height: 100vh;
+      height: auto;
+      width: auto;
+    }
+
+    /* Button is positioned as a percentage of the image dimensions */
+    .cta {
+      position: absolute;
+      left: var(--btn-left);
+      top: var(--btn-top);
+      transform: translate(-50%, -50%); /* center button on that anchor point */
+      padding: 10px 30px;
+      font-size: 1.1em;
+      color: white;
+      background: rgba(0,0,0,0.4);
+      border: none; border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.25s, color 0.25s;
+    }
+    .cta:hover { background: rgba(245, 3, 3, 0.585); color: rgb(255, 255, 255); }
+  </style>
+</head>
+<body>
+  <div class="frame">
+    <div class="img-wrap">
+      <img src="background.jpg" alt="Main visual" />
+      <button class="cta">Click Me</button>
+    </div>
+  </div>
+</body>
 </html>
