--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>  
       <!-- Links pinned to bottom -->
       <div class="links">
-        <a href="https://t.me/+bpPAKNf6qF8yZDA1" target="_blank">Telegram</a>
+        <a href="https://t.me/+GQxGUH34AsQ3MmI1" target="_blank">Telegram</a>
         <a href="https://x.com/dumparmy?s=21" target="_blank">X/Twitter</a>
       </div>
   </div>
