--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </div>
       <!-- Row 2 -->
       <div class="row">
-        <button onclick="copyContract()"><Contract Address></button>
+        <button onclick="copyContract()">CA Coming Soon</button>
       </div>
     </div>
   </div>
