--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     .links a, .links button {
       display: inline-block;
-      padding: 10px 20px;
+      padding: 12px 24px;
       text-decoration: none;
       color: white;
       background: rgba(0,0,0,0.7);
@@ -88,7 +88,7 @@
       white-space: nowrap;    
       border: none;
       cursor: pointer;
-      font-size: 1em;
+      font-size: 1.2em;
     }
     .links a:hover, .links button:hover {
       background: rgba(255, 179, 0, 0.4);
@@ -110,12 +110,12 @@
     <!-- Links pinned to bottom -->
     <div class="links">
       <!-- Row 1 -->
+       <div class="row"></div>  
       <div class="row">
         <a href="https://t.me/+GQxGUH34AsQ3MmI1" target="_blank">Telegram</a>
         <button onclick="copyContract()">CA Coming Soon</button>
         <a href="https://x.com/dumparmy?s=21" target="_blank">X/Twitter</a>
-      </div>
-    </div>
+     </div>
   </div>
 
   <script>
