Updated with CA

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <img src="background.jpg" alt="Main visual" />
 
       <!-- Main button -->
-      <button class="cta" onclick="window.open('https://dexscreener.com/solana','_blank')">
+      <button class="cta" onclick="window.open('https://pump.fun/coin/AgEwgvwcPnB8xeFarE4QUkQbE7XgBCNJYpCSoq2Upump','_blank')">
         Flush Me!
       </button>
     </div>  
@@ -113,14 +113,14 @@
        <div class="row"></div>  
       <div class="row">
         <a href="https://t.me/+GQxGUH34AsQ3MmI1" target="_blank">Telegram</a>
-        <button onclick="copyContract()">CA Coming Soon</button>
+        <button onclick="copyContract()">Contract Address</button>
         <a href="https://x.com/dumparmy?s=21" target="_blank">X/Twitter</a>
      </div>
   </div>
 
   <script>
     function copyContract() {
-      const contract = "<Contract Address>"; // Replace with actual address
+      const contract = "AgEwgvwcPnB8xeFarE4QUkQbE7XgBCNJYpCSoq2Upump"; // Replace with actual address
       navigator.clipboard.writeText(contract).then(() => {
         alert("Contract address copied to clipboard!");
       }).catch(err => {
